# versions-service

./: .codeclimate.yml  .coveragerc  .env.example  .gitignore  Dockerfile  MANIFEST.in  Pipfile  README.md  autoapp.py  docker-compose.yml  docker-entrypoint.sh  setup.cfg  setup.py  structlogger.py
.circleci/: config.yml
docs/: Makefile  conf.py  index.rst  metrics.rst  settings.rst
helm/versions_service/: Chart.yaml  test_values.yaml  values.yaml
helm/versions_service/hooks/: bootstrap.yaml  migrate-job.yaml  reset-db-job.yaml
helm/versions_service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  newrelic.yaml  secrets.yaml  service.yaml
migrations/versions/: 1f3ddc3890e6_install_postgres_extensions.py
tests/: conftest.py
tests/factories/: base.py
tests/integration/api/v1/health/: test_endpoints.py
tests/unit/api/v1/health/: test_endpoints.py
versions_service/: __init__.py  app.py  metrics.py  serializer.py  settings.py
versions_service/api/: __init__.py
versions_service/api/v1/: __init__.py  spec.yaml
versions_service/api/v1/health/: __init__.py  endpoints.py
versions_service/extensions/: __init__.py  flask_celery.py  flask_statsd.py  flask_structlog.py
