##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
#

[metadata]
name = versions_service
##
# The version in this file is ignored if the version
# can be inferred from git tags using setuptools_scm.
version = 0.1.0.dev0+missinggit
description = A new service for displaying the services version deployed in the Syapse environments.
long_description = A new service for displaying the services version deployed in the Syapse environments.
author = Syapse, Inc.
author_email = noreply@syapse.com
url = https://github.com/syapse/versions_service
license = Proprietary
classifiers =
  Framework :: Flask
  Intended Audience :: Healthcare Industry
  License :: Other/Proprietary License
  Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages =
  versions_service
setup_requires =
  setuptools_scm
install_requires =
  celery
  click
  connexion
  flask
  flask-bcrypt
  flask-caching
  flask-cors
  flask-marshmallow
  flask-migrate
  flask-sqlalchemy
  gevent
  gunicorn
  marshmallow-sqlalchemy
  marshmallow_enum
  newrelic
  psycopg2-binary
  python-decouple
  sqlalchemy
  statsd
  structlog
  werkzeug

[tool:pytest]
python_files = tests.py test_*.py *_tests.py
mock_use_standalone_module = True

[pep8]
ignore = D401, D210, E201, E202
max-line-length = 120

[check-manifest]
ignore =
  .circleci
  .circleci/*
  .dockerignore
  .github
  .github/*
  bin
  bin/*
